--- a/style.css
+++ b/style.css
@@ -524,3 +524,9 @@ padding:0;
         object-fit:cover;
     
 }
+@media(max-width:700px){
+    
+    .admission img{ margin:auto;
+                  margin-top:5px;
+    }
+}
