--- a/style.css
+++ b/style.css
@@ -526,7 +526,7 @@ padding:0;
 }
 @media(max-width:700px){
     
-    .admission {
-            width:100%
+    .admission{
+                 width:100%;
     }
 }
