--- a/style.css
+++ b/style.css
@@ -487,11 +487,32 @@ padding:0;
     transition:.2s;
 }
 
+@media(max-width:1440px){
+    
+    .gallery img{display:inline-block;
+                  margin:5px;
+                  margin-left:10px;
+                  width:325px;
+                  height:325px;
+                 
+    }
+}
 @media(max-width:700px){
     
     .gallery img{display:block;
                   margin:auto;
                   margin-top:5px;
+
+    }
+}
+@media(max-width:1024px){
+    
+    .gallery img{display:inline-block;
+                  margin:5px;
+                  margin-left:5px;
+                  width:310px;
+                  height:310px;
+                 
     }
 }
 .school-day h1{
@@ -512,11 +533,31 @@ padding:0;
     transition:.2s;
 }
 
+@media(max-width:1440px){
+    
+    .school-day img{display:inline-block;
+                  margin:5px;
+                  margin-left:10px;
+                  width:325px;
+                  height:325px;
+    }
+}
 @media(max-width:700px){
     
     .school-day img{display:block;
                   margin:auto;
                   margin-top:5px;
+
+    }
+}
+@media(max-width:1024px){
+    
+    .school-day img{display:inline-block;
+                  margin:5px;
+                  margin-left:5px;
+                  width:310px;
+                  height:310px;
+                 
     }
 }
 .admission{
@@ -524,7 +565,7 @@ padding:0;
         object-fit:cover;
     
 }
-@media(max-width:700px){
+@media(max-width:1440px){
     
     .admission{
                  width:100%;
